For the collections page, provide an option for filter position
For the collections page, provide an option for filter position

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -1791,6 +1791,9 @@
           "options__3": {
             "label": "Drawer"
           },
+          "options__4": {
+            "label": "Bottom"
+          },
           "info": "Drawer is the default mobile layout."
         },
         "enable_sorting": {
